--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,33 @@
 services:
+  stac-fastapi-pgstac:
+    image: ghcr.io/stac-utils/stac-fastapi-pgstac:5.0.1
+    platform: linux/amd64
+    ports:
+      - "8084:8084" 
+    environment:
+      - APP_HOST=0.0.0.0
+      - APP_PORT=8084
+      - RELOAD=true
+      - ENVIRONMENT=production
+      - POSTGRES_USER=username
+      - POSTGRES_PASS=password
+      - POSTGRES_DB=postgis
+      - POSTGRES_HOST=database
+      - POSTGRES_DBNAME=postgis
+      - POSTGRES_PORT=5432
+      - POSTGRES_HOST_READER=database
+      - POSTGRES_HOST_WRITER=database
+      - WEB_CONCURRENCY=10
+      - VSI_CACHE=TRUE
+      - GDAL_HTTP_MERGE_CONSECUTIVE_RANGES=YES
+      - GDAL_DISABLE_READDIR_ON_OPEN=EMPTY_DIR
+      - DB_MIN_CONN_SIZE=1
+      - DB_MAX_CONN_SIZE=1
+      - USE_API_HYDRATE=${USE_API_HYDRATE:-false}
+    depends_on:
+      - database
+    # command: uvicorn stac_fastapi.pgstac.app:app --host $APP_HOST --port $APP_PORT"
+    command: ["uvicorn", "stac_fastapi.pgstac.app:app", "--host", "0.0.0.0", "--port", "8084", "--workers", "1", "--log-level", "debug"]
   tiler:
     container_name: tiler-pgstac
     # At the time of writing, rasterio and psycopg wheels are not available for arm64 arch
@@ -50,6 +79,8 @@ services:
       - AWS_SESSION_TOKEN=${AWS_SESSION_TOKEN}
       - TITILER_API_DEBUG=TRUE
       - TITILER_PGSTAC_API_DEBUG=TRUE
+      - TITILER_PGSTAC_API_ENABLE_ASSETS_ENPOINTS=TRUE
+      - TITILER_PGSTAC_API_ENABLE_EXTERNAL_DATASET_ENDPOINTS=TRUE
     volumes:
       - ./benchmark:/tmp/benchmark
     depends_on:
