--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   stac-fastapi-pgstac:
-    image: ghcr.io/stac-utils/stac-fastapi-pgstac:5.0.1
+    image: ghcr.io/stac-utils/stac-fastapi-pgstac:5.0.2
     platform: linux/amd64
     ports:
       - "8084:8084" 
@@ -111,7 +111,7 @@ services:
 
   database:
     container_name: stac-db
-    image: ghcr.io/stac-utils/pgstac:v${PGSTAC_VERSION-0.9.2}
+    image: ghcr.io/stac-utils/pgstac:v0.7.10
     environment:
       - POSTGRES_USER=username
       - POSTGRES_PASSWORD=password
@@ -123,6 +123,16 @@ services:
     command: postgres -N 500
     volumes:
       - ./.pgdata:/var/lib/postgresql/data
+
+  pgstac-migrator:
+    image: ghcr.io/stac-utils/pgstac-pypgstac:v0.9.6
+    environment:
+      # Postgres connection
+      - PGUSER=username
+      - PGPASSWORD=password
+      - PGDATABASE=postgis
+      - PGHOST=database
+      - PGPORT=5432
 
 networks:
   default:
